--- a/package.json
+++ b/package.json
@@ -26,5 +26,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "![ReactJS Resume Website Template](resume-screenshot.png?raw=true \"ReactJS Resume Website Template\")",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CleverProgrammers/react-portfolio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/CleverProgrammers/react-portfolio/issues"
+  },
+  "homepage": "https://github.com/CleverProgrammers/react-portfolio#readme",
+  "devDependencies": {}
 }
